# tcp-server

./: Cargo.toml  hello.html
.github/workflows/: rust.yml
Threadpool/: thread.rs
http/: get.rs  mod.rs  put.rs
http/methods/: list.rs
render/: base.html  receiver.html  sender.html
render/base/: base.html  base.js  styles.css
render/receiver/: receiver.html
render/sender/: sender.html
sender/: sender.rs
src/: lib.rs  main.rs
tcp/: allowed_request.rs  handle_receiver.rs  handle_sender.rs  mod.rs  tcp.rs
