[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
hyper = "0.14"
multipart = "0.18.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
